# API_Scrapper

./: CMakeLists.txt  README.md  check.cpp
include/: ApiLogic.hpp  CurlWrapper.hpp  api_json_extraction.hpp  subtract.hpp
src/: ApiLogic.cpp  CurlWrapper.cpp  api_json_extraction.cpp  main.cpp  subtract.cpp
test/: api_json_extraction_test.cpp  subtract_test.cpp
